# findlibs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ci-hpc-config.yml
.github/workflows/: cd-pypi.yml  ci.yml
findlibs/: __init__.py
tests/: downstream-ci-requirements.txt  test_basic.py  test_config_file.py  test_find.py
tests/transitive/: test_transitive.py
tests/transitive/modAlib/: __init__.py
tests/transitive/modAlibs/: __init__.py
